--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,27 @@
 {
   "name": "shop-o-matic-backend",
-  "version": "1.0.0",
-  "description": "Food",
-  "main": "server.js",
+  "version": "0.1.0",
+  "description": "The backend for the shop-o-matic app",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Nick Doering",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
-    "@babel/node": "^7.12.1",
+    "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
+    "@prisma/cli": "^2.10.1",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "apollo-server-express": "^2.18.2",
+    "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
-    "graphql": "^15.3.0",
-    "mongoose": "^5.10.10"
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.22.1",
+    "graphql-compose-mongoose": "^9.0.0"
   }
 }
