--- a/package.json
+++ b/package.json
@@ -39,8 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "concurrently": "^5.3.0",
-    "cors": "^2.8.5"
-  }
+  "devDependencies": {}
 }
