--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-compose": "^7.22.1",
-    "graphql-compose-mongoose": "^9.0.0"
+    "graphql-compose-mongoose": "^9.0.0",
+    "mongoose": "^5.10.12"
   }
 }
